# helpdesk

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
helpdesk_mgmt/: README.rst  __manifest__.py
helpdesk_mgmt/controllers/: myaccount.py
helpdesk_mgmt/i18n/: helpdesk_mgmt.pot  it.po  sk.po
helpdesk_mgmt/models/: helpdesk_ticket.py
helpdesk_mgmt/static/description/: index.html
helpdesk_mgmt/views/: helpdesk_dashboard_views.xml  helpdesk_ticket_category_views.xml  helpdesk_ticket_channel_views.xml  helpdesk_ticket_stage_views.xml  helpdesk_ticket_tag_views.xml  helpdesk_ticket_team_views.xml  helpdesk_ticket_templates.xml  helpdesk_ticket_views.xml
helpdesk_mgmt_crm/: README.rst
helpdesk_mgmt_crm/i18n/: helpdesk_mgmt_crm.pot  it.po
helpdesk_mgmt_crm/static/description/: index.html
helpdesk_mgmt_project/: README.rst
helpdesk_mgmt_project/static/description/: index.html
helpdesk_mgmt_sale/: README.rst
helpdesk_mgmt_sale/i18n/: it.po
helpdesk_mgmt_sale/static/description/: index.html
helpdesk_portal_restriction/: README.rst
helpdesk_portal_restriction/i18n/: it.po
helpdesk_portal_restriction/static/description/: index.html
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
setup/helpdesk_portal_restriction/odoo/addons/: helpdesk_portal_restriction
setup/helpdesk_ticket_open_tab/odoo/addons/: helpdesk_ticket_open_tab
setup/helpdesk_ticket_related/odoo/addons/: helpdesk_ticket_related
