[project]
name = "odoo-addons-oca-helpdesk"
version = "17.0.20250116.1"
dependencies = [
    "odoo-addon-helpdesk_mgmt>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_crm>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_sale>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
